Revision history for Class-Tiny

{{$NEXT}}

0.012     2013-11-01 16:36:35 America/New_York

    [DOCUMENTED]

    - added documentation notes about multiple inheritance
      and attribute defaults under subclassing

    [INTERNAL]

    - added tests for multiple inheritance

0.011     2013-09-25 11:08:07 America/New_York

    [FIXED]

    - compile test could hang on Windows

    [PREREQS]

    - ExtUtils::MakeMaker configure_requires dropped to 6.17

0.010     2013-09-18 13:23:15 America/New_York

    [FIXED]

    - suppressed 'used only once' warnings (GH #9)

0.009     2013-09-17 06:54:47 America/New_York

    [FIXED]

    - "won't stay shared" bug on older perls

0.008     2013-09-08 09:49:46 America/New_York

    [FIXED]

    - META.yml encoding problems

    [DOCUMENTED]

    - revised CONTRIBUTING

    [INTERNAL]

    - refactored precaching

0.007     2013-09-07 16:48:56 America/New_York

    [OPTIMIZED]

    - accessors without defaults are now much faster (comparable
      to Class::Accessor::Fast)

    - constructor and destructors are slightly faster when there
      are no superclasses except Class::Tiny::Object

    - linearized @ISA and other items are cached for speed when
      the first object is created

0.006     2013-09-05 11:56:48 America/New_York

    [ADDED]

    - added introspection method: get_all_attribute_defaults_for($class)

    [DOCUMENTED]

    - Fixed TOBYINK email address for contributors list

    - Revised rationale for why Class::Tiny vs other modules

0.005     2013-08-28 11:51:37 America/New_York

    [ADDED]

    - Attributes now support lazy defaults passed as a hash reference
      to the class declaration

0.004     2013-08-21 16:38:01 America/New_York

    [CHANGED]

    - Base class is now Class::Tiny::Object; Class::Tiny is now only the
      class builder

    - BUILD and DEMOLISH now have Moo(se) like semantics: BUILD gets
      original constructor arguments. DEMOLISH is now passed a global