@@ -2,6 +2,10 @@ Revision history for Class-Tiny
 
 {{$NEXT}}
 
+    [DOCUMENTED]
+
+    - expanded comparision to Object::Tiny and Class::Accessor
+
 0.012     2013-11-01 16:36:35 America/New_York
 
     [DOCUMENTED]
